@@ -276,7 +276,7 @@ action_export_subfactory=Export subfactories to a string that can be shared with
 action_archive_subfactory=Move the selected subfactory to the archive
 action_unarchive_subfactory=Move the selected subfactory back out of archive
 action_duplicate_subfactory=Duplicate the selected subfactory, creating a perfect copy
-action_add_subfactory=Create a new subfactory\n[font=default-semibold][color=#84CDEC]Alt-click[/color][/font] to choose a product right away
+action_add_subfactory=Create a new subfactory\n[font=default-semibold][color=#84CDEC]Shift-click[/color][/font] to choose a product right away
 action_edit_subfactory=Edit the name and icon of the selected subfactory
 action_trash_subfactory=Trash the selected subfactory\nIt will be preserved in the archive for __1__ minutes
 action_delete_subfactory=Delete the selected subfactory irreversibly
